--- a/HALL TO CODE/aula-1/exercicio1.html
+++ b/HALL TO CODE/aula-1/exercicio1.html
@@ -11,28 +11,27 @@
     <h1>Inscrição Hall To Code</h1>
     <h2>Venha participar do melhor curso do Brasil!</h2>
     <form>
-        <label for="input-email">E-mail</label>
-        <input required id="input-email" placeholder="Preencha com o seu e-mail">
-        <br>
-        <br>
-        <label for="input-name">Nome</label>
-        <input required id="input-name" placeholder="Preencha com o seu nome">
-        <br>
-        <br>
-        <label for="input-age">Idade</label>
-        <input required id="input-age" placeholder="Preencha com a sua idade">
-        <br>
-        <br>
-        <label for="start-date">Quando deseja começar?</label>
-        <input id="start-date" type="date">
-        <br>
-        <br>
-        <input id="input-eula" type="checkbox"></input>
+        <label for="input-email">E-mail:
+            <input required id="input-email" type="email" placeholder="Preencha com o seu e-mail">
+        </label>
+        <br><br>
+        <label for="input-name">Nome:
+            <input required id="input-name" type="text" placeholder="Preencha com o seu nome">
+        </label>
+        <br><br>
+        <label for="input-age">Idade:
+            <input required id="input-age" type="number" placeholder="Preencha com a sua idade">
+        </label>
+        <br><br>
+        <label for="start-date">Quando deseja começar?:
+            <input id="start-date" type="date">
+        </label>
+        <br><br>
+        <input id="input-eula" type="checkbox" required>
         <label for="input-eula">Aceito os <a href="eula.html" target="_blank">Termos De Uso</a></label>
-        <br>
-        <br>
-        <button>Enviar</button>
-
+        <p>Marque esta caixa para confirmar que você leu e concorda com os Termos de Uso.</p>
+        <br><br>
+        <button type="submit">Enviar</button>
     </form>
 </body>
 
